# Styx

./: Cargo.toml  LICENSE-MIT  PLAN.md  README.md
crates/capture/: Cargo.toml  README.md
crates/capture/src/: lib.rs  virtual_backend.rs
crates/codec/: Cargo.toml  README.md
crates/codec/src/: image_any.rs  image_utils.rs  jpeg_encoder.rs  lib.rs  mjpeg.rs  mjpeg_turbojpeg.rs  mjpeg_zune.rs
crates/codec/src/decoder/: ffmpeg.rs  mjpeg.rs  mod.rs
crates/codec/src/decoder/raw/: bayer.rs  bgr.rs  bgra.rs  i420.rs  mod.rs  mono.rs  nv12.rs  passthrough.rs  rgb48.rs  rgba.rs  yuv.rs  yuv420p.rs  yuyv.rs
crates/codec/src/encoder/: ffmpeg.rs  mod.rs  mozjpeg.rs
crates/codec/src/ffmpeg/: decoder.rs  encoder.rs  mod.rs  util.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: buffer.rs  controls.rs  format.rs  lib.rs  metrics.rs  queue.rs  transform.rs
crates/libcamera/: Cargo.toml  README.md
crates/libcamera/src/: lib.rs
crates/styx/: Cargo.toml  README.md
crates/styx/examples/: async_pipeline.rs  capture_and_decode.rs  capture_virtual.rs  ffmpeg_scale.rs  file_replay.rs  libcamera_ffmpeg_preview.rs  mjpeg_decode.rs  netcam_capture.rs  probe_and_select.rs
crates/styx/src/: lib.rs  metrics.rs  preview.rs  session.rs
crates/styx/src/capture_api/: controls.rs  ffmpeg_util.rs  file_backend.rs  handle.rs  libcamera_backend.rs  mod.rs  netcam_backend.rs  request.rs  tunables.rs  v4l2_backend.rs  virtual_backend.rs
crates/v4l2/: Cargo.toml  README.md
crates/v4l2/src/: lib.rs
