[package]
name = "styx-codec"
version = "0.1.0"
edition = "2024"
description = "Codec registry and MJPEG/raw codecs for the Styx media stack."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Prometheus-Dynamics/Styx"
homepage = "https://github.com/Prometheus-Dynamics/Styx"
documentation = "https://docs.rs/styx-codec"
readme = "README.md"
keywords = ["media", "video", "codec", "mjpeg"]
categories = ["multimedia::video", "multimedia::encoding"]
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[dependencies]
styx-core = { package = "styx-core-rs", path = "../core", version = "0.1.0" }
styx-capture = { path = "../capture", version = "0.1.0" }
thiserror = "2.0.17"
jpeg-decoder = "0.3.2"
zune-jpeg = { version = "0.5.6", optional = true }
zune-core = { version = "0.5.0", optional = true }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"], optional = true }
mozjpeg = { version = "0.10.13", optional = true }
turbojpeg = { version = "1.3.3", optional = true }
ffmpeg-next = { version = "8.0.0", features = ["codec", "format", "software-scaling"], optional = true }
smallvec = "1.15.1"
yuvutils-rs = "0.8.3"
rayon = "1.11.0"
serde = { version = "1.0.217", features = ["derive"], optional = true }
utoipa = { version = "5.4.0", default-features = false, features = ["macros"], optional = true }

[features]
default = []
image = ["dep:image"]
codec-zune = ["zune-jpeg", "zune-core"]
codec-mozjpeg = ["mozjpeg"]
codec-turbojpeg = ["turbojpeg"]
codec-ffmpeg = ["ffmpeg-next"]
serde = ["dep:serde", "styx-core/serde", "styx-capture/serde"]
schema = ["serde", "dep:utoipa", "styx-core/schema", "styx-capture/schema"]
