[package]
name = "styx"
version = "0.1.0"
edition = "2024"
description = "Sync-first, zero-copy capture→decode→process→encode media stack."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sozo/Styx"
homepage = "https://github.com/sozo/Styx"
documentation = "https://docs.rs/styx"
readme = "README.md"
keywords = ["media", "video", "capture", "pipeline", "zero-copy"]
categories = ["multimedia::video", "multimedia::encoding"]
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[dependencies]
styx-core = { package = "styx-core-rs", path = "../core", version = "0.1.0" }
styx-capture = { path = "../capture", version = "0.1.0" }
styx-codec = { path = "../codec", version = "0.1.0" }
styx-libcamera = { path = "../libcamera", version = "0.1.0", optional = true, features = ["probe"] }
styx-v4l2 = { path = "../v4l2", version = "0.1.0", optional = true }
smallvec = "1.15.1"
v4l = { version = "0.14", optional = true }
thiserror = "2.0.17"
libcamera = { version = "0.6", default-features = false, features = ["libcamera_semver_versioning", "vendor_draft"], optional = true }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"], optional = true }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"], optional = true }
jpeg-decoder = { version = "0.3.2", optional = true }
reqwest = { version = "0.12.25", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
ffmpeg-next = { version = "8.0.0", features = ["codec", "format", "software-scaling"], optional = true }
minifb = { version = "0.25.0", optional = true }
tokio-util = { version = "0.7.13", features = ["io"], optional = true }
futures-core = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", features = ["io"], optional = true }
once_cell = "1.19.0"
serde = { version = "1.0.217", features = ["derive"], optional = true }
utoipa = { version = "5.4.0", default-features = false, features = ["macros"], optional = true }

[features]
default = ["hooks"]
hooks = ["dep:image", "styx-codec/image"]
libcamera = ["styx-libcamera", "dep:libcamera"]
libcamera-vendor-rpi = ["libcamera", "styx-libcamera/vendor_rpi", "dep:libcamera"]
v4l2 = ["styx-v4l2", "v4l"]
async = ["styx-core/async", "tokio", "tokio-util", "futures-core", "futures-util"]
codec-ffmpeg = ["styx-codec/codec-ffmpeg"]
codec-mozjpeg = ["styx-codec/codec-mozjpeg"]
netcam = ["dep:reqwest"]
netcam-video = ["dep:ffmpeg-next"]
file-backend = ["dep:image", "dep:jpeg-decoder"]
file-backend-video = ["dep:ffmpeg-next"]
preview-window = ["dep:minifb"]
examples = ["preview-window", "async"]
serde = [
    "dep:serde",
    "styx-core/serde",
    "styx-capture/serde",
    "styx-codec/serde",
]
schema = ["dep:utoipa", "serde", "styx-core/schema", "styx-capture/schema", "styx-codec/schema"]

[package.metadata.docs.rs]
features = ["async", "serde", "schema", "netcam", "file-backend"]
